# opendds_template

./: CMakeLists.txt  install.sh
config/: rtps.ini
idl/: GNUmakefile  GNUmakefile.Messenger_Idl  Messenger.mpc
lib/test/: test.h
src/: DataReaderListenerImpl.cpp  Publisher.cpp  Subscriber.cpp
